# p4_openmp_carlosjose

./: .gitignore  Ejercicios.md  README.md
diagrama_dependencias/: diagrama-dependencias.mmd
logs/: plot_speedup.py  plot_tiempos.py  plot_vertical.py  resultados_rendimiento.json  resultados_rendimiento_carlos.json  resultados_rendimiento_jose.json  start.sh
scripts/: diagnostics.sh  entorno.cc  runall.sh  runone.sh  runzero.sh  test.sh
src/hiperoptimized/Task1/src/: main.cc
src/hiperoptimized/Task1/src/utils/: CMakeLists.txt  dct.cc  image.h
src/optimized/Task1/: CMakeLists.txt
src/optimized_async/Task1/src/: main.cc
src/optimized_async/Task1/src/utils/: image.h
src/optimized_tasks/Task1/src/: main.cc
src/optimized_tasks/Task1/src/utils/: image.h
src/source/Task0/: runzero.sh
src/source/Task1/src/: main.cc
src/suboptimized/Task1/src/: CMakeLists.txt  main.cc
src/suboptimized/Task1/src/utils/: dct.cc
tests/: test.sh
